fixes vertical paragraph spacing

--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -47,7 +47,7 @@
 	padding: 0 0 5rem;
 }
 .bodyCon{
-	padding: 0 0 3rem;
+	padding: 0 0 1rem;
 }
 .intro {
 	@media (min-width: $breakpoint-medium) {
